--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/react-dom": "^18.2.1",
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
 		"@typescript-eslint/parser": "^5.59.11",
+		"@webpack-cli/serve": "^2.0.5",
 		"autoprefixer": "^10.4.14",
 		"clean-webpack-plugin": "^4.0.0",
 		"commitizen": "^4.3.0",
